@@ -3,20 +3,22 @@ Hash: SHA256
 
 DIST guava-13.0.1-sources.jar 1060992 SHA256 6968729f41bd225c00ce6c9212674fe5fa64346ca267072860253c87156507d3 SHA512 07b29cf199229e82a6ec42aad4a6f700c4230ae4b3d41d64f46786619884d572b71dace9f2b521b5f0a50359b460ae6f123dafc80bc982b04856a0dd3a9a0663 WHIRLPOOL dc1a1b978b57d8a36747d03ef88778cb9f4060313c7377c5188948cf4d58cae7e9cb0b304e7a449730955235f1f744a8d4b96b82f0844eb37857824f920faad7
 DIST guava-14.0.1-sources.jar 1170076 SHA256 a41f35daf37667524bf76c33f8d14ff2a2bb8bfb38e876327628f62f7592e53e SHA512 0a495da0fcc460308faa017b4754a3460eeff08cbfcbfa1cb976fccf3cf9a0fb191e1b88a6c7a753b816b878dd4368f5ba27d5644bbe4c3132dc44e940a8372c WHIRLPOOL 7f2c1d694e54378b81046c0162b1bcc68951d2e37601fbf44d517b6205a3fb42ac0b107f504d533230595d7f7c9c3228294a3f1ccf07b1da7d0d1b10616969ec
+DIST guava-15.0-sources.jar 1234606 SHA256 1a3f78cfd4a44f63af00afe36f2175d41ed24d25aedf3542f47664f81815a211 SHA512 fe4fcc723115fbc4f824a1358d81e98565b92b6d682b86d25b566f1e9b6c266fac42a3502e6d49d1faa87fdfbadf206043b4d8965402dd821333dda00b93819e WHIRLPOOL e9f3466073542b4d93d6f934e241e5244a5f39b0b35a83836721524bacb8e259d4f0a05cf32c53932f8decf6589e6e896873cb5bec141b0f029fd2c1f667b15a
 DIST guava-r07.zip 3044916 SHA256 3d0da5843235b26dc5d47b75df48a6f06f0cc428534580762352b3b00fa45c40 SHA512 1ea4c0b4a7747fb555150283eb851da9d96ec705f1b8e05709b533e923a2615dd82979afbf729093c493e0c11a5f7841f576a6a56a4e9fd5a7e8af224aca956f WHIRLPOOL 3718e030038eaf597b1d35e318eeb708df8d5b66a606d5ffa1fc0e7a742f22f271d6fa6d72d1ce138fcd206e32c7680c5bccf4400f3fc969f41623a7d1f88013
 EBUILD guava-07.ebuild 925 SHA256 ee1955334cfae2f26f7e9fabec3240e5015b9d7819ee19e80f0834e661dd96dc SHA512 b1f05dc2238f276a59d54e5024decd24d4da53af29a8a3d5ce442bb0b169480b369dd78ca164a09cc07a97bc0f2d939c7752d7a02f26ef1d5cdfe2fbec67b2ed WHIRLPOOL a1b70208b71da9908a97511cb279edbb7c97204706fbf6abddabd82d98191608b46facf081e722c239e319de281e85c93d155c30181399b1bb01c1aaba1f36b7
 EBUILD guava-13.0.1.ebuild 872 SHA256 32a47b67f47b66fbc4660e8913e2a8c9566f2a4d1606e2afd9ef11a7dcb37d0b SHA512 7c80451416db5955ef66ab9093a66c6244098d5d4be60b15b80f16950bcd5b39e30626563693da88c75e88974e1d00390b148f09fcf14a42192972ebb28a7279 WHIRLPOOL 308a57b79fe4c4c05702e7427ed84e71120009d073ac1a5c6cbd747f1a60ed0f3d75279f7505a963460d412eb13f841c06a75fadce0fbafe096d8ea2c5f07092
 EBUILD guava-14.0.1.ebuild 910 SHA256 4c72552a40f4b82eac8d9cee2f83cec3122fa925d04f7c1727ac44f6901e810e SHA512 a7554885878aaabae7958301f2620eafcbc5cfab5dff7d7277da1b4716d6ffb34776aa4bf2b3a22e6feb94e06da5705e0bbd942e14a88216a6ee385e9facf2d0 WHIRLPOOL 6d8faaff372e07a7ba97da02a47ef468eb04724e64c9f5388502c143d9c2680ca37486d03e4b3dbd84a9120b2f7b851b7e85f26edb793ca53759f83af1cd0859
-MISC ChangeLog 1093 SHA256 af767a147fac54a524c9c502f222f42ae6283fb1eb70fd02b9ff98facc50e7cc SHA512 efd6b9bd43b04dd5fe50db1bfc295a57d83ddc76c5cf86fb643df997f5faa7202503b9895343cd59cf8b32041d54339565493ed365e063bf6dffb4d652c364d6 WHIRLPOOL 2818554b70940394292eb90a8e5d0e3e6720da7a9cafdce037b51dae2ea79f62b7ae3f501e8697116b80ef60620f56da1475ab9cbe4d413937917cd1301ec814
+EBUILD guava-15.0.ebuild 908 SHA256 e41018cf92e26657588895812174189f7a532a0893b68ab3271eac0748d832ce SHA512 0a86e6235d585836d800712a5b0d416f43789924d2438287ac2679d7b1a784fd2f73f51e8bd6bf2a14e8f920527a0ab20a479bc4f5d2c0df9283c634a96e4f72 WHIRLPOOL c8c68b924c573b1d107fb35896fe12dff31a996b7159a50a6330064b4d13a56b5503b2378acae64782aff3463264122a1bfbe21ab7325ae74f296a6a919a925c
+MISC ChangeLog 1220 SHA256 f7fff3cefe5f19057ce82a324b7c3b099d8c0368f3b0459ffb1f14d15570a7fe SHA512 55c603588fecf46ed003471d274f83bdcc053e6fb6d1e722bf351620dadbb88534e8381fbed20cf76a00a80b8605ef839ea3b528833ff8eda5b6cc44c10f847f WHIRLPOOL 32ed1cd22c748bdf5668cfc858ae8c0e19a350ff136f87dd10f20214a82a1b5abcb5007241cc6a2cfc66ee55be70892e3ac9dda6e98bc56d20c3a6f817abef74
 MISC metadata.xml 518 SHA256 3965861d65ee5bf9ed480d3fdfaf6cdbc526eb0c50a3cb95396d115cbf5b781d SHA512 490def61fc0d0e7c7393cbaa44c9fc5935a4a0dc7e16bfb15fb07978da5caf2b68016290077191c33dc7a50b6b84a85ae35390c526156b5a86252449964a9c75 WHIRLPOOL b9bdef07e3412303f53ed2e811e5d94b8663d24cdbf37c891dfddd2eba2473c30c675628f88a7661442659583c6cf94d4be4e4e1d8052932c38c5904b1d0a445
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRUSJdAAoJEEqz6FtPBkyjkm8IAJamLgaFLoIrPEE0RxlpOczL
-MpD9pZePbHV1eUzly2cqCeVHfvn/2t45O0ZvGM8OupdKPecIEXop13HvWKW/84+v
-FTVEHf8NiauxeaY6enNEFxMF6iPaW7RyZdakpbdhzsw4rSyubVs148TF+RbJUATP
-wWXain8p2QoHAHoH0K7lxwDKmQ5sRF+nno4qmcxgW6RcTZgg1O/ASY92vK6Wdw6L
-yyYLk9OpqiyzG02BwDdGZi2mJoBGJmZA30dXB2ybunNClgvc129fS6GDuKqL+/hL
-O9Ezu4l0T4UupMCezJavJhOdk24UTjGt1DqlW03TL0pQC9Md/UvkxYiF22SnW2Y=
-=ujym
+iQEcBAEBCAAGBQJSQ3SDAAoJEEqz6FtPBkyjQn4H/2P5yiEwUO+T3ITKj6RT9n7L
+nBo4Iqa6Rsf26ajiL90tOrEMTub5KsmQT2fe1pB+doU5zaNmhoe3RY+jTSRjlwpv
+OrGFQb6n4PnwVQ4nGuZlXwBwsSMocNOyC1WrgRJcPH0AKIrGkphFwe24wBCNfzhE
+vz+EogXMU+1tVESoEA8pxsMzexwA3Dvz25ZCxxg8Lq2w8XNXFB6V6v+9JtArg0LH
+iBJO3ZfFd4w3dKTzWtiZ5iGE7hiVNZwzhjVSKtbNCLeIA26glZa26IINXuy5895S
+JHUOiiHZ4wi+KamvOU52fwtVi+srtgCxj92KBhcCgC8qp59sQ75N9CsCsSbX2hM=
+=0Czd
 -----END PGP SIGNATURE-----
