@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst prepare setup
+DEPEND=dev-java/javax-inject:0 dev-java/jsr305:0 java-virtuals/jdk-with-com-sun:0 app-arch/unzip >=virtual/jdk-1.7 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+DESCRIPTION=A collection of Google's core Java libraries
+EAPI=5
+HOMEPAGE=http://code.google.com/p/guava-libraries/
+IUSE=elibc_FreeBSD doc source elibc_FreeBSD
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux ~x64-macos ~x86-macos
+LICENSE=Apache-2.0
+RDEPEND=dev-java/javax-inject:0 dev-java/jsr305:0 java-virtuals/jdk-with-com-sun:0 >=virtual/jre-1.6 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+SLOT=15
+SRC_URI=http://search.maven.org/remotecontent?filepath=com/google/guava/guava/15.0/guava-15.0-sources.jar
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	d7cef87260947d4cce245c4f026377e2	java-utils-2	6032f7ec6471c6459da900e11f0f7bf7	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=372ca38cec245f39d6bf363cfcf08e8e
