@@ -1,6 +1,14 @@
 # ChangeLog for dev-python/python-neutronclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-neutronclient/ChangeLog,v 1.3 2013/09/13 20:36:10 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-neutronclient/ChangeLog,v 1.4 2013/09/25 23:53:42 prometheanfire Exp $
+
+*python-neutronclient-2.3.0-r2 (25 Sep 2013)
+*python-neutronclient-2.2.6-r2 (25 Sep 2013)
+
+  25 Sep 2013; Matthew Thode <prometheanfire@gentoo.org>
+  +python-neutronclient-2.2.6-r2.ebuild, +python-neutronclient-2.3.0-r2.ebuild,
+  -python-neutronclient-2.2.6-r1.ebuild, -python-neutronclient-2.3.0-r1.ebuild:
+  stupid stupid quantum to neutron shit
 
 *python-neutronclient-2.3.0-r1 (13 Sep 2013)
 *python-neutronclient-2.2.3 (13 Sep 2013)
