@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/guava
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/guava/ChangeLog,v 1.7 2013/03/26 04:21:47 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/guava/ChangeLog,v 1.8 2013/09/25 23:40:47 radhermit Exp $
+
+*guava-15.0 (25 Sep 2013)
+
+  25 Sep 2013; Tim Harder <radhermit@gentoo.org> +guava-15.0.ebuild:
+  Version bump (bug #486034).
 
 *guava-14.0.1 (26 Mar 2013)
 
